--- a/springtest/src/main/resources/static/js/app/views/home.html
+++ b/springtest/src/main/resources/static/js/app/views/home.html
@@ -1,28 +1,209 @@
 <form class="form-vertical" novalidate>
-    <fieldset ng-show="vm.step == 1">
-        <legend>Step one</legend>
+    <div class="dialog" ng-show="vm.step == 1">
+        <table>
+            <tbody>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Name</label>
+                </td>
+                <td valign="top" class="value ">
+                    <input type="text" name="name" ng-model="vm.speaker.name">
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Surname</label>
+                </td>
+                <td valign="top" class="value ">
+                    <input type="text" name="surname" ng-model="vm.speaker.surname">
+                </td>
+            </tr>
+            <!--
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Photo:</label>
+                </td>
+                <td valign="top" class="value">
+                    <input type="file" id="photoFile" name="photoFile">
+                </td>
+            </tr> -->
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Email</label>
+                </td>
+                <td valign="top" class="value">
+                    <input type="text" name="email" ng-model="vm.speaker.email">
+                </td>
+            </tr>
+
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Confirm Email</label>
+                </td>
+                <td valign="top" class="value ">
+                    <input type="text" name="confirmEmail" ng-model="vm.speaker.confirmEmail">
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Twitter</label>
+                </td>
+                <td valign="top" class="value ">
+                    <span style="vertical-align: baseline;">@</span>
+                    <input type="text" name="twitter" ng-model="vm.speaker.twitter">
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label for="fromLocation">From</label>
+                </td>
+                <td valign="top" class="value ">
+                    <select name="fromLocation" id="fromLocation" ng-model="vm.speaker.location">
+                        <option value="POLAND">Poland</option>
+                        <option value="EUROPE">Europe</option>
+                        <option value="OUTSIDE_EUROPE">Outside Europe</option>
+                    </select>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Bio Line</label>
+                </td>
+                <td valign="top" class="value ">
+                    <textarea name="shortBio" id="shortBio" ng-model="vm.speaker.shortBio"></textarea>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label for="bio">Bio</label>
+                </td>
+                <td valign="top" class="value">
+                    <textarea name="bio" id="bio" ng-model="vm.speaker.bio">
+                    </textarea>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <input type="button" ng-click="vm.nextStep()" value="Next step"/>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="dialog" ng-show="vm.step==2">
+        <table>
+            <tbody>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Title</label>
+                </td>
+                <td valign="top" class="value ">
+                    <input type="text" ng-model="vm.presentation.title"/>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Topic</label>
+                </td>
+                <td valign="top" class="value ">
+                    <select ng-model="vm.presentation.topic">
+                        <option value="one">One</option>
+                        <option value="two">two</option>
+                        <option value="Three">Three</option>
+                    </select>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>Type</label>
+                </td>
+                <td valign="top" class="value ">
+                    <select ng-model="vm.presentation.type">
+                        <option value="one">Expert</option>
+                        <option value="two">novice</option>
+                        <option value="Three">begineer</option>
+                    </select>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td valign="top" class="name">
+                    <label>abstract</label>
+                </td>
+                <td valign="top" class="value ">
+                    <textarea name="bio" ng-model="vm.presentation.abstract">
+                    </textarea>
+                </td>
+            </tr>
+            <tr class="prop">
+                <td>
+                    <input type="button" ng-click="vm.nextStep()" value="Next step"/>
+                </td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+    <div class="dialog" ng-show="vm.step == 3">
         <div class="form-group">
-            <label for="name">Your name</label>
-            <input class="form-control" type="text" id="name" name="name" ng-model="vm.person.name" />
-        </div>
-        <button class="btn btn-primary" ng-click="vm.nextStep()">Next step</button>
-    </fieldset>
-    <fieldset ng-show="vm.step == 2">
-        <legend>Step two</legend>
-        <div class="form-group">
-            <label for="email">Your email</label>
-            <input class="form-control" type="email" id="email" name="email" ng-model="vm.person.email" />
+            <span>Speaker Details</span>
+            <table>
+                <tbody>
+
+                <tr>
+                    <td>
+                        name
+                    </td>
+                    <td>
+                        {{vm.speaker.name}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        surname
+                    </td>
+                    <td>
+                        {{vm.speaker.surname}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        from
+                    </td>
+                    <td>
+                        {{vm.speaker.location}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        email
+                    </td>
+                    <td>
+                        {{vm.speaker.email}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        twitter
+                    </td>
+                    <td>
+                        {{vm.speaker.twitter}}
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">speeches summary</td>
+                    <td>
+                        {{vm.presentation.title}}
+                    </td>
+                    <td>{{vm.presentation.topic}}</td>
+                    <td>{{vm.presentation.type}}</td>
+                </tr>
+                <tr>
+                    <input type="button" ng-click="vm.speechEdit()" value="Edit This speech"/>
+                </tr>
+                </tbody>
+            </table>
         </div>
         <button class="btn btn-default" ng-click="vm.previousStep()">Previous step</button>
-        <button class="btn btn-primary" ng-click="vm.nextStep()">Next step</button>
-    </fieldset>
-    <fieldset ng-show="vm.step == 3">
-        <legend>Step three</legend>
-        <div class="form-group">
-            <label for="msg">Short message</label>
-            <input class="form-control" type="text" id="msg" name="msg" ng-model="vm.person.msg" />
-        </div>
-        <button class="btn btn-default" ng-click="vm.previousStep()">Previous step</button>
-        <button class="btn btn-primary" ng-click="vm.save(vm.person)">Submit</button>
-    </fieldset>
+        <button class="btn btn-primary" ng-click="vm.save(vm)">Submit</button>
+    </div>
 </form>
