bootstrap added and ui router added

--- a/springtest/src/main/resources/static/css/Site.css
+++ b/springtest/src/main/resources/static/css/Site.css
@@ -1,19 +1,38 @@
 body{
     margin: 0 auto;
-    font-family: Verdana;
     width: 1024px;
 }
-.prop {
-     padding: 5px;
- }
-
-.prop .name {
-    text-align: left;
-    width: 15%;
-    white-space: nowrap;
+#list a.active span {
+    background: #00BC8C;
 }
 
-.prop .value {
-    text-align: left;
-    width: 85%;
+#status-buttons {
+}
+
+#status-buttons a {
+    color: #FFF;
+    display: inline-block;
+    font-size: 12px;
+    margin-right: 10px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+#status-buttons a:hover {
+    text-decoration: none;
+}
+
+#status-buttons span {
+    background: #080808;
+    display: block;
+    height: 30px;
+    margin: 0 auto 10px;
+    padding-top: 5px;
+    width: 30px;
+    border-radius: 50%;
+}
+
+/* active buttons */
+#status-buttons a.active span {
+    background: #00BC8C;
 }
