--- a/springtest/src/main/resources/templates/index.html
+++ b/springtest/src/main/resources/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Multilevel form in angular</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link th:href="@{/css/bootstrap/css/bootstrap.css}" href="/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/bootstrap/css/bootstrap-theme.css}" href="/css/bootstrap/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/Site.css}" href="/css/Site.css" rel="stylesheet" type="text/css"/>
 </head>
 <body ng-app="mlevel">
