--- a/springtest/src/main/resources/static/js/app/views/summary.html
+++ b/springtest/src/main/resources/static/js/app/views/summary.html
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <td>From:</td>
-                <td>Dhaka</td>
+                <td>{{vm.speaker.from}}</td>
             </tr>
             <tr>
                 <td>Email:</td>
