--- a/springtest/src/main/resources/static/js/app/views/home.html
+++ b/springtest/src/main/resources/static/js/app/views/home.html
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <form ng-submit="processForm()" class="form-horizontal" role="form">
+        <form ng-submit="processForm()" class="form-horizontal" role="form"d name="vm.form">
             <div ui-view="">
             </div>
         </form>
