--- a/springtest/src/main/resources/static/js/app/views/profile.html
+++ b/springtest/src/main/resources/static/js/app/views/profile.html
@@ -1,28 +1,32 @@
-<div class="form-group">
+<div class="form-group" ng-class="vm.error('name')">
     <label class="control-label col-md-2" for="name">Name:</label>
     <div class="col-md-4">
-        <input type="text" class="form-control" id="name" placeholder="Enter Name" ng-model="vm.speaker.name"/>
+        <input type="text" class="form-control" name="name" id="name" placeholder="Enter Name" ng-model="vm.speaker.name" required/>
+        <span class="has-error help-block" ng-show="vm.form.name.$invalid && vm.form.name.$dirty">Name is required</span>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group" ng-class="vm.error('surname')">
     <label class="control-label col-md-2" for="surname">Surname:</label>
     <div class="col-md-4">
-        <input type="text" class="form-control" id="surname" placeholder="Surname" ng-model="vm.speaker.surname"/>
+        <input type="text" class="form-control" name="surname" id="surname" placeholder="Surname" ng-model="vm.speaker.surname" required/>
+        <span class="has-error help-block" ng-show="vm.form.surname.$invalid && vm.form.surname.$dirty">Surname is required</span>
     </div>
 </div>
-<div class="form-group">
-    <label class="control-label col-md-2" for="surname">Email:</label>
+<div class="form-group" ng-class="vm.error('email')">
+    <label class="control-label col-md-2" for="email">Email:</label>
     <div class="col-md-4">
-        <input type="email" class="form-control" id="email" placeholder="email" ng-model="vm.speaker.email"/>
+        <input type="email" class="form-control" id="email" name="email" placeholder="email" ng-model="vm.speaker.email" required/>
+        <span class="has-error help-block" ng-show="vm.form.email.$invalid && vm.form.email.$dirty">Email is required</span>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group" ng-class="vm.error('twitter')">
     <label class="control-label col-md-2" for="twitter">Twitter:</label>
     <div class="col-md-4">
-        <input type="text" class="form-control" id="twitter" placeholder="twitter" ng-model="vm.speaker.twitter"/>
+        <input type="text" class="form-control" id="twitter" name="twitter" placeholder="twitter" ng-model="vm.speaker.twitter" required/>
+        <span class="has-error help-block" ng-show="vm.form.twitter.$invalid && vm.form.twitter.$dirty">Twitter is required</span>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group" ng-class="vm.error('from')">
     <label class="control-label col-md-2" for="from">From:</label>
     <div class="col-md-4">
         <select id="from" name="from" class="form-control" ng-model="vm.speaker.location">
@@ -30,6 +34,7 @@
             <option value="2">NY</option>
             <option value="3">California</option>
         </select>
+        <span class="has-error help-block" ng-show="vm.form.from.$invalid && vm.form.from.$dirty">From Location is required</span>
     </div>
 </div>
 <div class="form-group">
@@ -46,7 +51,7 @@
 </div>
 <div class="form-group">
     <div class="col-md-offset-2 col-md-2">
-        <a ui-sref="/.presentation" class="btn btn-primary">
+        <a ui-sref="/.presentation" class="btn btn-primary" ng-disabled="vm.form.$invalid">
             Next <span class="glyphicon glyphicon-circle-arrow-right"></span>
         </a>
     </div>
