--- a/springtest/src/main/resources/static/js/app/views/home.html
+++ b/springtest/src/main/resources/static/js/app/views/home.html
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <form ng-submit="vm.processForm(vm.speaker,vm.speech)" class="form-horizontal" role="form" name="vm.form">
+        <form ng-submit="vm.processForm(vm.speaker,vm.speech)" class="form-horizontal" role="form" name="vm.form" enctype="multipart/form-data">
             <div ui-view="">
             </div>
         </form>
