--- a/springtest/src/main/resources/static/js/app/views/profile.html
+++ b/springtest/src/main/resources/static/js/app/views/profile.html
@@ -5,6 +5,7 @@
         <span class="has-error help-block" ng-show="vm.form.name.$invalid && vm.form.name.$dirty">Name is required</span>
     </div>
 </div>
+<input type="file" name="file" fileRead="vm.file"/>
 <div class="form-group" ng-class="vm.error('surname')">
     <label class="control-label col-md-2" for="surname">Surname:</label>
     <div class="col-md-4">
