--- a/springtest/src/main/resources/templates/index.html
+++ b/springtest/src/main/resources/templates/index.html
@@ -19,7 +19,8 @@
 
 <script th:src="@{/js/app/app.js}" src="/js/app/app.js" type="text/javascript"></script>
 <script th:src="@{/js/app/config/config.js}" src="/js/app/config/config.js" type="text/javascript"></script>
-<script th:src="@{/js/app/controllers/homeController.js}" src="/js/app/controllers/homeController.js"
-        type="text/javascript"></script>
+<script th:src="@{/js/app/directives/file.js}" src="/js/app/directives/file.js" type="text/javascript"></script>
+<script th:src="@{/js/app/controllers/homeController.js}" src="/js/app/controllers/homeController.js" type="text/javascript"></script>
+
 </body>
 </html>
